--- a/services/programs-service/package.json
+++ b/services/programs-service/package.json
@@ -24,11 +24,13 @@
   },
   "homepage": "https://github.com/lujakob/nestjs-realworld-example-app#readme",
   "dependencies": {
+    "@godaddy/terminus": "^4.1.0",
     "@nestjs/common": "^6.0.1",
     "@nestjs/core": "^6.0.1",
     "@nestjs/microservices": "^6.0.1",
     "@nestjs/platform-express": "^6.0.1",
     "@nestjs/swagger": "^3.0.1",
+    "@nestjs/terminus": "^6.1.4",
     "@nestjs/testing": "^6.0.1",
     "@nestjs/typeorm": "^6.0.0",
     "@nestjs/websockets": "^6.0.1",
