--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -9,6 +9,14 @@ trigger:
     include:
     - interfaces/HO-Portal/*
 
+pr:
+  branches:
+    include:
+    - master
+  paths:
+    include:
+    - interfaces/HO-Portal/*
+
 pool:
   vmImage: 'ubuntu-16.04'
 strategy:
@@ -21,5 +29,25 @@ steps:
   inputs:
     versionSpec: $(node_version)
 
-- script: npm install && npm run lint
-  workingDirectory: interfaces/HO-Portal/
+- script: npm install
+  displayName: Install
+  workingDirectory: $(System.DefaultWorkingDirectory)/interfaces/HO-Portal/
+
+- script: npm run lint
+  displayName: Linting
+  workingDirectory: $(System.DefaultWorkingDirectory)/interfaces/HO-Portal/
+
+- script: npm run test:ci
+  displayName: Tests
+  workingDirectory: $(System.DefaultWorkingDirectory)/interfaces/HO-Portal/
+
+- script: npm run build --prod
+  displayName: Build
+  workingDirectory: $(System.DefaultWorkingDirectory)/interfaces/HO-Portal/
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: cobertura
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/*coverage.xml'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/coverage'
+
