AB#87 Tweak CI test script(s)/steps + use production build
Related AB#182

--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
     - releases/*
   paths:
     include:
-    - interfaces/HO-Portal/*
+    - interfaces/HO-Portal/**/*
 
 pr:
   branches:
@@ -15,7 +15,7 @@ pr:
     - master
   paths:
     include:
-    - interfaces/HO-Portal/*
+    - interfaces/HO-Portal/**/*
 
 pool:
   vmImage: 'ubuntu-16.04'
@@ -25,29 +25,30 @@ strategy:
       node_version: 10.x
 
 steps:
+- workingDirectory: interfaces/HO-Portal/
+
 - task: NodeTool@0
   inputs:
     versionSpec: $(node_version)
 
 - script: npm install
   displayName: Install
-  workingDirectory: $(System.DefaultWorkingDirectory)/interfaces/HO-Portal/
 
 - script: npm run lint
   displayName: Linting
-  workingDirectory: $(System.DefaultWorkingDirectory)/interfaces/HO-Portal/
 
 - script: npm run test:ci
   displayName: Tests
-  workingDirectory: $(System.DefaultWorkingDirectory)/interfaces/HO-Portal/
 
-- script: npm run build --prod
+- script: npm run build -- --prod
   displayName: Build
-  workingDirectory: $(System.DefaultWorkingDirectory)/interfaces/HO-Portal/
 
 - task: PublishCodeCoverageResults@1
   inputs:
     codeCoverageTool: cobertura
     summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/*coverage.xml'
-    reportDirectory: '$(System.DefaultWorkingDirectory)/coverage'
 
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'
+    testResultsFiles: '**/TEST-*.xml'
