--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -8,9 +8,12 @@ trigger:
   paths:
     include:
     - interfaces/HO-Portal/*
+    exclude:
+    - !interfaces/HO-Portal/
 
 pool:
   vmImage: 'ubuntu-16.04'
+
 strategy:
   matrix:
     node_10_x:
