--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -1,3 +1,4 @@
+# See: https://docs.microsoft.com/azure/devops/pipelines/yaml-schema
 # See: https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
@@ -9,7 +10,7 @@ trigger:
     include:
     - interfaces/HO-Portal/*
     exclude:
-    - !interfaces/HO-Portal/
+    - "!interfaces/HO-Portal/*"
 
 pool:
   vmImage: 'ubuntu-16.04'
