--- a/services/programs-service/azure-pipelines.yml
+++ b/services/programs-service/azure-pipelines.yml
@@ -1,7 +1,5 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
+# See: https://docs.microsoft.com/azure/devops/pipelines/yaml-schema
+# See: https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
   branches:
