--- a/services/programs-service/azure-pipelines.yml
+++ b/services/programs-service/azure-pipelines.yml
@@ -5,14 +5,21 @@ trigger:
   branches:
     include:
     - master
-    - releases/*
   paths:
     include:
-    - services/programs-service/*
+    - ./services/programs-service/*
+
+pr:
+  branches:
+    include:
+    - master
+  paths:
+    include:
+    - ./services/programs-service/*
 
 pool:
   vmImage: 'ubuntu-16.04'
-  
+
 strategy:
   matrix:
     node_10_x:
