Accept all branches

--- a/services/programs-service/azure-pipelines.yml
+++ b/services/programs-service/azure-pipelines.yml
@@ -10,6 +10,9 @@ trigger:
     - ./services/programs-service/*
 
 pr:
+  branches:
+    include:
+    - "*"
   paths:
     include:
     - ./services/programs-service/*
