--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -10,6 +10,9 @@ trigger:
     - ./interfaces/HO-Portal/*
 
 pr:
+  branches:
+    include:
+    - "*"
   paths:
     include:
     - ./interfaces/HO-Portal/*
