--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -4,10 +4,10 @@
 trigger:
   branches:
     include:
-    - master
+    - "*"
   paths:
     include:
-    - ./interfaces/HO-Portal/*
+    - interfaces/HO-Portal/*
 
 pr:
   branches:
@@ -15,7 +15,7 @@ pr:
     - "*"
   paths:
     include:
-    - ./interfaces/HO-Portal/*
+    - interfaces/HO-Portal/*
 
 pool:
   vmImage: 'ubuntu-16.04'
