--- a/services/programs-service/ormconfig.json.example
+++ b/services/programs-service/ormconfig.json.example
@@ -6,5 +6,6 @@
   "password": "<secret>",
   "database": "global121",
   "entities": ["src/**/**.entity{.ts,.js}"],
+  "dropSchema": true,
   "synchronize": true
 }
