--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -1,7 +1,11 @@
 # See: https://docs.microsoft.com/azure/devops/pipelines/yaml-schema
 # See: https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
-trigger: none
+trigger:
+  branches:
+    include:
+    - master
+    - greenkeeper/*
 pr:
   branches:
     include:
