Rename test-command to be a bit more CI/robot-friendly

--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
   displayName: Linting
   workingDirectory: interfaces/HO-Portal/
 
-- script: npm run test:ci
+- script: npm test
   displayName: Tests
   workingDirectory: interfaces/HO-Portal/
 
