--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -14,35 +14,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/http": "^7.2.2",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/pwa": "^0.800.1",
-    "@angular/router": "^8.0.0",
-    "@angular/service-worker": "^8.0.0",
+    "@angular/common": "^7.x.x",
+    "@angular/core": "^7.x.x",
+    "@angular/forms": "^7.x.x",
+    "@angular/http": "^7.x.x",
+    "@angular/platform-browser": "^7.x.x",
+    "@angular/platform-browser-dynamic": "^7.x.x",
+    "@angular/pwa": "^0.12.4",
+    "@angular/router": "^7.x.x",
+    "@angular/service-worker": "^7.x.x",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "core-js": "^3.1.3",
+    "core-js": "2.6.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.800.1",
-    "@angular-devkit/build-angular": "~0.800.1",
-    "@angular-devkit/core": "~8.0.1",
-    "@angular-devkit/schematics": "~8.0.1",
-    "@angular/cli": "~8.0.1",
-    "@angular/compiler": "~8.0.0",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
+    "@angular-devkit/architect": "~0.13.8",
+    "@angular-devkit/build-angular": "~0.13.8",
+    "@angular-devkit/core": "^7.x.x",
+    "@angular-devkit/schematics": "^7.x.x",
+    "@angular/cli": "^7.x.x",
+    "@angular/compiler": "^7.x.x",
+    "@angular/compiler-cli": "^7.x.x",
+    "@angular/language-service": "^7.x.x",
     "@ionic/angular-toolkit": "~1.5.1",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.3",
@@ -58,6 +58,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.2.0",
     "tslint": "~5.17.0",
-    "typescript": "~3.5.1"
+    "typescript": "3.1.6"
   }
 }
