--- a/services/programs-service/package.json
+++ b/services/programs-service/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nestjs-realworld-example-app",
-  "version": "1.0.0",
-  "description": "[![Build Status](https://travis-ci.org/anishkny/node-express-realworld-example-app.svg?branch=master)](https://travis-ci.org/anishkny/node-express-realworld-example-app)",
+  "name": "programs-service",
+  "version": "0.0.1",
+  "author": "121.global",
+  "homepage": "https://www.121.global/",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -13,16 +14,7 @@
     "test:watch": "jest --watch --config=jest.json",
     "test:coverage": "jest --config=jest.json --coverage --coverageDirectory=coverage"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lujakob/nestjs-realworld-example-app.git"
-  },
-  "author": "lu.jakob@googlemail.com",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lujakob/nestjs-realworld-example-app/issues"
-  },
-  "homepage": "https://github.com/lujakob/nestjs-realworld-example-app#readme",
+  "private": true,
   "dependencies": {
     "@godaddy/terminus": "^4.1.0",
     "@nestjs/common": "^6.0.1",
