--- a/services/programs-service/Dockerfile
+++ b/services/programs-service/Dockerfile
@@ -22,7 +22,7 @@ RUN mkdir --parents /home/121/
 WORKDIR /home/121/
 
 COPY package*.json ./
-RUN npm install
+RUN npm clean-install
 COPY . .
 
 CMD ["npm", "run", "start:dev"]
