--- a/services/programs-service/package.json
+++ b/services/programs-service/package.json
@@ -51,6 +51,7 @@
     "jest": "^24.5.0",
     "nodemon": "^1.18.10",
     "supertest": "^4.0.2",
+    "swagger-ui-express": "^4.0.6",
     "ts-jest": "^24.0.0",
     "ts-node": "~8.2.0"
   }
