--- a/services/programs-service/tsconfig.json
+++ b/services/programs-service/tsconfig.json
@@ -11,7 +11,10 @@
     "target": "es6",
     "sourceMap": true,
     "allowJs": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "types": [
+      "jest",
+    ]
   },
     "include": [
     "src/**/*"
@@ -21,6 +24,6 @@
     "**/*.spec.ts"
   ],
     "types": [
-    "jest"
+    "jest",
   ]
 }
