--- a/services/programs-service/azure-pipelines.yml
+++ b/services/programs-service/azure-pipelines.yml
@@ -23,6 +23,10 @@ strategy:
       node_version: 10.x
 
 steps:
+- task: CmdLine@2
+  inputs:
+    script: cp services/programs-service/src/secrets.ts.example services/programs-service/src/secrets.ts
+
 - task: NodeTool@0
   inputs:
     versionSpec: $(node_version)
