--- a/services/programs-service/package.json
+++ b/services/programs-service/package.json
@@ -26,6 +26,8 @@
     "@nestjs/testing": "^6.0.1",
     "@nestjs/typeorm": "^6.0.0",
     "@nestjs/websockets": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "crypto": "^1.0.1",
@@ -47,9 +49,13 @@
     "@types/node": "^12.0.4",
     "atob": ">=2.1.0",
     "deep-extend": ">=0.5.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "extend": ">=3.0.2",
     "jest": "^24.5.0",
     "nodemon": "^1.18.10",
+    "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.0.6",
     "ts-jest": "^24.0.0",
