--- a/integration-tools/tykn-id/package.json
+++ b/integration-tools/tykn-id/package.json
@@ -15,10 +15,18 @@
   "engines": {
     "node": ">=8"
   },
+  "scripts": {
+    "test": " ava --fail-fast --verbose"
+  },
   "dependencies": {
     "bindings": "^1.3.1",
     "indy-sdk": "1.9.0",
     "nan": "^2.11.1",
-    "node-gyp": "^3.8.0"
+    "node-gyp": "^3.8.0",
+    "untildify": "^4.0.0"
+  },
+  "devDependencies": {
+    "ava": "^1.4.1",
+    "home-dir": "^1.0.0"
   }
 }
