--- a/services/programs-service/package.json
+++ b/services/programs-service/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://www.121.global/",
   "main": "index.js",
   "scripts": {
+    "lint": "npx eslint '**/*.ts'",
     "start": "node index.js",
     "start:dev": "tsc-watch --onSuccess \"node index.js\" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
     "start:watch": "nodemon",
