--- a/services/programs-service/package.json
+++ b/services/programs-service/package.json
@@ -52,6 +52,7 @@
     "deep-extend": ">=0.5.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-jest": "^22.7.1",
     "eslint-plugin-prettier": "^3.1.0",
     "extend": ">=3.0.2",
     "jest": "^24.5.0",
