--- a/integration-tools/tykn-id/ci/sampleconfig.json
+++ b/integration-tools/tykn-id/ci/sampleconfig.json
@@ -3,5 +3,6 @@
     "walletKey" : "test",
     "walletPath":"~/.indy_client/wallet",
     "orgDid" : "P65pCL8QLaBNTQpAXD85KK",
-    "orgVerKey" : "D3EZRRMCvHp62BE8gyUtayxNka6XmzuwCHS5uvP1do9G"
+    "orgVerKey" : "D3EZRRMCvHp62BE8gyUtayxNka6XmzuwCHS5uvP1do9G",
+    "orgSeed" : "ny9mAdxr4WCrF79Mv2MYorOF1nVkubh4"
 }
