--- a/integration-tools/tykn-id/package.json
+++ b/integration-tools/tykn-id/package.json
@@ -18,6 +18,9 @@
   "scripts": {
     "test": " ava --fail-fast --verbose"
   },
+  "ava":{
+		"watch": true
+	},
   "dependencies": {
     "bindings": "^1.3.1",
     "indy-sdk": "1.9.0",
@@ -27,6 +30,8 @@
   },
   "devDependencies": {
     "ava": "^1.4.1",
-    "home-dir": "^1.0.0"
+    "home-dir": "^1.0.0",
+    "cuid": "^2.1.4",
+    "tempy": "^0.3.0"
   }
 }
