Edited package json with sepparate command that drop and seeds user datebase on file change 'strart:seed'

--- a/services/programs-service/package.json
+++ b/services/programs-service/package.json
@@ -7,10 +7,12 @@
     "scripts": {
         "lint": "npx eslint '**/*.ts'",
         "start": "node index.js",
-        "start:dev": "tsc-watch --onSuccess \"  npm run seed:start \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
+        "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
         "start:watch": "nodemon",
         "prestart:prod": "tsc",
-        "seed:start": "node index.js & sleep 5 && ts-node src/scripts seed ",
+        "seed": "ts-node src/scripts seed",
+        "seed:node": "node index.js & npm start seed",
+        "start:seed": "tsc-watch --onSuccess \" npm start seed:node  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
         "start:prod": "node dist/main.js",
         "test": "jest --config=jest.json",
         "test:watch": "jest --watch --config=jest.json",
