--- a/services/programs-service/package.json
+++ b/services/programs-service/package.json
@@ -11,8 +11,8 @@
         "start:watch": "nodemon",
         "prestart:prod": "tsc",
         "seed": "ts-node src/scripts seed",
-        "seed:node": "node index.js & npm start seed",
-        "start:seed": "tsc-watch --onSuccess \" npm start seed:node  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
+        "seed:node": "node index.js & npm run seed",
+        "start:seed": "tsc-watch --onSuccess \" npm run seed:node  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
         "start:prod": "node dist/main.js",
         "test": "jest --config=jest.json",
         "test:watch": "jest --watch --config=jest.json",
