--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -17,15 +17,10 @@ pr:
 pool:
   vmImage: 'ubuntu-16.04'
 
-strategy:
-  matrix:
-    node_10_x:
-      node_version: 10.x
-
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: $(node_version)
+    versionSpec: '10.x'
 
 - script: npm ci
   displayName: Install
