--- a/services/programs-service/azure-pipelines.yml
+++ b/services/programs-service/azure-pipelines.yml
@@ -17,11 +17,6 @@ pr:
 pool:
   vmImage: 'ubuntu-16.04'
 
-strategy:
-  matrix:
-    node_10_x:
-      node_version: 10.x
-
 steps:
 - task: CmdLine@2
   inputs:
@@ -29,7 +24,7 @@ steps:
 
 - task: NodeTool@0
   inputs:
-    versionSpec: $(node_version)
+    versionSpec: '10.x'
 
 - script: npm ci
   displayName: Install
