--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -25,6 +25,8 @@
     "@ionic-native/splash-screen": "^5.10.0",
     "@ionic-native/status-bar": "^5.10.0",
     "@ionic/angular": "^4.6.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "2.6.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
