Update yml file (used in pipeline) for folder rename

--- a/services/121-service/azure-pipelines.yml
+++ b/services/121-service/azure-pipelines.yml
@@ -4,32 +4,32 @@
 trigger:
   branches:
     include:
-    - master
-    - greenkeeper/*
+      - master
+      - greenkeeper/*
 pr:
   branches:
     include:
-    - master
+      - master
   paths:
     include:
-    - 'services/programs-service/*'
+      - 'services/121-service/*'
 
 pool:
   vmImage: 'ubuntu-16.04'
 
 steps:
-- task: CmdLine@2
-  inputs:
-    script: cp services/programs-service/src/secrets.ts.example services/programs-service/src/secrets.ts
+  - task: CmdLine@2
+    inputs:
+      script: cp services/121-service/src/secrets.ts.example services/121-service/src/secrets.ts
 
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '10.x'
 
-- script: npm ci
-  displayName: Install
-  workingDirectory: services/programs-service/
+  - script: npm ci
+    displayName: Install
+    workingDirectory: services/121-service/
 
-- script: npm test
-  displayName: Tests
-  workingDirectory: services/programs-service/
+  - script: npm test
+    displayName: Tests
+    workingDirectory: services/121-service/
