Limit the scope of the separate builds to only their own source code

--- a/interfaces/PA-App/azure-pipelines.yml
+++ b/interfaces/PA-App/azure-pipelines.yml
@@ -6,6 +6,9 @@ trigger:
     include:
     - master
     - greenkeeper/*
+  paths:
+    include:
+    - 'interfaces/PA-App/*'
 pr:
   branches:
     include:
