--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -6,6 +6,9 @@ trigger:
     include:
     - master
     - greenkeeper/*
+  paths:
+    include:
+    - 'interfaces/HO-Portal/*'
 pr:
   branches:
     include:
