Limit greenkeeper-checks

--- a/services/121-service/azure-pipelines.yml
+++ b/services/121-service/azure-pipelines.yml
@@ -5,7 +5,7 @@ trigger:
   branches:
     include:
       - master
-      - greenkeeper/*
+      - greenkeeper/Services/*
   paths:
     include:
       - 'services/121-service/*'
