--- a/interfaces/HO-Portal/azure-pipelines.yml
+++ b/interfaces/HO-Portal/azure-pipelines.yml
@@ -5,7 +5,7 @@ trigger:
   branches:
     include:
     - master
-    - greenkeeper/*
+    - greenkeeper/Interfaces/*
   paths:
     include:
     - 'interfaces/HO-Portal/*'
