integrated tykn-id in 121-service

--- a/integration-tools/tykn-id/Dockerfile
+++ b/integration-tools/tykn-id/Dockerfile
@@ -26,4 +26,4 @@ RUN apt-get install -y nodejs
 
 ADD . /workspace
 
-RUN cd /workspace && npm install && npm test
+#RUN cd /workspace && npm install && npm test
