Added functionality to calculate the inclusion score based on proof, proofrequest and program parameters

--- a/services/121-service/tsconfig.json
+++ b/services/121-service/tsconfig.json
@@ -12,7 +12,9 @@
     "sourceMap": true,
     "allowJs": true,
     "outDir": "./dist",
-    "types": ["jest"]
+    "types": ["jest"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"],
