Added get request to get credential for PA

--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -1,7 +1,7 @@
 export const SECRET = 'secret-key';
 export const USERCONFIG = {
-  passwordAdmin: 'password',
-  usernameAdmin: 'admin',
+  passwordAdmin: 'string',
+  usernameAdmin: 'string',
   emailAdmin: 'admin@test.nl',
   passwordFieldworker: 'password',
   usernameFieldworker: 'fieldworker',
