--- a/services/121-service/Dockerfile
+++ b/services/121-service/Dockerfile
@@ -32,9 +32,9 @@ RUN npm ci
 
 # HO wallet+DID import
 COPY secrets/ secrets/
-RUN cd "secrets/DID generation/" && chmod +x setup_env.sh
-RUN cd "secrets/DID generation/" && ./setup_env.sh
-RUN cd "secrets/DID generation/" && indy-cli import-HO-wallet.txt
+RUN cd "secrets/DID_generation/" && chmod +x setup_env.sh
+RUN cd "secrets/DID_generation/" && ./setup_env.sh
+RUN cd "secrets/DID_generation/" && indy-cli import-HO-wallet.txt
 
 #CMD ["npm", "run", "test:watch"]
 #CMD ["npm", "run", "start:dev"]
