--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.10.0",
     "@ionic-native/status-bar": "^5.10.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "2.6.8",
