--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -15,7 +15,7 @@
         "start:seed": "tsc-watch --onSuccess \" npm run seed:node  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
         "start:prod": "node dist/main.js",
         "test": "jest --config=jest.json",
-        "test:watch": "jest --watch --config=jest.json",
+        "test:watch": "jest --watchAll --config=jest.json",
         "test:coverage": "jest --config=jest.json --coverage --coverageDirectory=coverage"
     },
     "private": true,
