--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser-dynamic": "^7.x.x",
     "@angular/router": "^7.x.x",
     "@ionic-native/core": "^5.10.0",
+    "@ionic-native/qr-scanner": "^5.12.0",
     "@ionic-native/splash-screen": "^5.10.0",
     "@ionic-native/status-bar": "^5.10.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "2.6.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -58,5 +60,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.1.6"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-qrscanner": {}
+    }
   }
 }
