AB#617 PA-accounts-service changed azure-pipelines

--- a/services/PA-accounts-service/azure-pipelines.yml
+++ b/services/PA-accounts-service/azure-pipelines.yml
@@ -7,14 +7,14 @@ trigger:
       - master
   paths:
     include:
-      - 'services/121-service/*'
+      - 'services/PA-accounts-service/*'
 pr:
   branches:
     include:
       - master
   paths:
     include:
-      - 'services/121-service/*'
+      - 'services/PA-accounts-service/*'
 
 pool:
   vmImage: 'ubuntu-16.04'
@@ -22,7 +22,7 @@ pool:
 steps:
   - task: CmdLine@2
     inputs:
-      script: cp services/121-service/src/secrets.ts.example services/121-service/src/secrets.ts
+      script: cp services/PA-accounts-service/src/secrets.ts.example services/PA-accounts-service/src/secrets.ts
 
   - task: NodeTool@0
     inputs:
@@ -30,8 +30,8 @@ steps:
 
   - script: npm ci
     displayName: Install
-    workingDirectory: services/121-service/
+    workingDirectory: services/PA-accounts-service/
 
   - script: npm test
     displayName: Tests
-    workingDirectory: services/121-service/
+    workingDirectory: services/PA-accounts-service/
