--- a/services/PA-accounts-service/src/secrets.ts.example
+++ b/services/PA-accounts-service/src/secrets.ts.example
@@ -1,6 +1,5 @@
 export const SECRET = 'secret-key';
 export const USERCONFIG = {
   password: 'password',
-  username: 'test-pa',
-  email: 'test@test.nl',
+  username: 'test-pa'
 }
