Align seed-scripts and READMEs of services

--- a/services/PA-accounts-service/package.json
+++ b/services/PA-accounts-service/package.json
@@ -10,7 +10,8 @@
         "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
         "start:watch": "nodemon",
         "prestart:prod": "tsc",
-        "seed": "ts-node src/scripts seed",
+        "seed": "ts-node src/scripts seed-init",
+        "seed:dev": "ts-node src/scripts seed-init",
         "seed:node": "node index.js & npm run seed",
         "start:seed": "tsc-watch --onSuccess \" npm run seed:node  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
         "start:prod": "node dist/main.js",
