Use proper examples + FieldWorker=AidWorker
- email-addresses / domains
- example-files with correct extension (for syntax format/highlighting)

--- a/services/121-service/azure-pipelines.yml
+++ b/services/121-service/azure-pipelines.yml
@@ -22,7 +22,7 @@ pool:
 steps:
   - task: CmdLine@2
     inputs:
-      script: cp services/121-service/src/secrets.ts.example services/121-service/src/secrets.ts
+      script: cp services/121-service/src/secrets.example.ts services/121-service/src/secrets.ts
 
   - task: NodeTool@0
     inputs:
