--- a/services/121-service/ormconfig.example.json
+++ b/services/121-service/ormconfig.example.json
@@ -6,7 +6,9 @@
   "password": "<secret>",
   "database": "global121",
   "schema": "121-service",
-  "entities": ["src/**/**.entity{.ts,.js}"],
+  "entities": [
+    "src/**/**.entity{.ts,.js}"
+  ],
   "dropSchema": true,
   "synchronize": true
 }
