Configured package json and seed scripts and readme to allow consistent publishing of programs

--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -11,10 +11,10 @@
     "start:watch": "nodemon",
     "prestart:prod": "tsc",
     "seed": "ts-node src/scripts seed-prod",
-    "seed:dev": "ts-node src/scripts seed-dev",
-    "seed:mvp": "docker exec -i 121-service npx ts-node src/scripts seed-mvp && npm run seed:publish",
+    "seed:dev": "npx ts-node src/scripts seed-dev && npm run seed:publish",
+    "seed:mvp": "npx ts-node src/scripts seed-mvp && npm run seed:publish",
     "seed:node": "node index.js & npm run seed",
-    "seed:publish": "docker exec -i 121-service npx ts-node src/scripts seed-publish",
+    "seed:publish": "npx ts-node src/scripts seed-publish",
     "start:prod": "node dist/main.js",
     "test": "jest --config=jest.json",
     "test:watch": "jest --watchAll --config=jest.json",
