AB#662 changed docker setup to work on server

--- a/services/tykn-ssi-services/TyknIMS/Dockerfile
+++ b/services/tykn-ssi-services/TyknIMS/Dockerfile
@@ -18,8 +18,8 @@ ENV VIRTUAL_ENV=/opt/venv
 RUN python3.6 -m virtualenv --python=/usr/bin/python3.6 $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
-RUN wget "https://raw.githubusercontent.com/hyperledger/indy-sdk/master/cli/docker_pool_transactions_genesis"
-
+# Replaced by local docker_pool_transactions_genesis
+#RUN wget "https://raw.githubusercontent.com/hyperledger/indy-sdk/master/cli/docker_pool_transactions_genesis"
 
 ADD . .
 RUN ls -la && pwd
