--- a/services/PA-accounts-service/Dockerfile.template
+++ b/services/PA-accounts-service/Dockerfile.template
@@ -23,7 +23,7 @@ WORKDIR /home/121/services/PA-accounts-service/
 COPY package*.json ./
 RUN npm ci
 
-CMD ["npm", "run", "start:dev"]
+#CMD ["npm", "run", "start:dev"]
 #CMD ["npm", "start"]
 
 
