--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -69,6 +69,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "native-run": "^0.2.8",
     "protractor": "~5.4.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
