Update README about building/deploying the native app

--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -4,11 +4,14 @@
   "author": "121.global",
   "homepage": "https://www.121.global/",
   "scripts": {
+    "dev:on-device": "npm run ionic -- cordova run android --device --consolelogs --livereload",
+    "dev:local": "npm run ionic -- cordova run browser --consolelogs --livereload",
     "cordova": "cordova",
     "ionic": "ionic",
     "ng": "ng",
     "start": "ng serve --port 0",
     "build": "ng build",
+    "build:native": "npm run ionic -- cordova build android ",
     "test": "ng test --no-watch --browsers=ChromeHeadless",
     "test:dev": "ng test",
     "lint": "ng lint",
