--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -1,9 +1,9 @@
 export const SECRET = 'secret-key';
 export const USERCONFIG = {
-  passwordAdmin: 'string',
-  usernameAdmin: 'string',
-  emailAdmin: 'admin@test.nl',
-  passwordFieldworker: 'password',
-  usernameFieldworker: 'fieldworker',
-  emailFieldworker: 'fieldworker@test.nl',
+  passwordAdmin: 'password',
+  usernameAdmin: 'admin',
+  emailAdmin: 'admin@example.org',
+  passwordAidWorker: 'password',
+  usernameAidWorker: 'aidworker',
+  emailAidWorker: 'aidworker@example.org',
 }
