--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -3,7 +3,9 @@ export const USERCONFIG = {
   passwordAdmin: 'password',
   usernameAdmin: 'admin',
   emailAdmin: 'admin@example.org',
+  countryIdAdmin: 1,
   passwordAidWorker: 'password',
   usernameAidWorker: 'aidworker',
   emailAidWorker: 'aidworker@example.org',
+  countryIdAidWorker: 1,
 }
