--- a/services/PA-accounts-service/Dockerfile.template
+++ b/services/PA-accounts-service/Dockerfile.template
@@ -23,6 +23,8 @@ WORKDIR /home/121/services/PA-accounts-service/
 COPY package*.json ./
 RUN npm ci
 
+ARG NODE_ENV=development #development/production
+ENV NODE_ENV="${NODE_ENV}"
 #CMD ["npm", "run", "start:dev"]
 #CMD ["npm", "start"]
 
