Fix syntax issue in Dockerfile(s)

--- a/services/121-service/Dockerfile.template
+++ b/services/121-service/Dockerfile.template
@@ -36,8 +36,13 @@ RUN cd "secrets/DID_generation/" && chmod +x setup_env.sh
 RUN cd "secrets/DID_generation/" && ./setup_env.sh
 RUN cd "secrets/DID_generation/" && indy-cli import-HO-wallet.txt
 
-ARG NODE_ENV=development #development/production
+# Possible environments: development | production
+ARG NODE_ENV=development
 ENV NODE_ENV="${NODE_ENV}"
-#CMD ["npm", "run", "start:dev"]
-#CMD ["npm", "start"]
+
+# With live-reload during development:
+# CMD ["npm", "run", "start:dev"]
+
+# Regular:
+# CMD ["npm", "start"]
 
