--- a/services/PA-accounts-service/Dockerfile.template
+++ b/services/PA-accounts-service/Dockerfile.template
@@ -23,9 +23,12 @@ WORKDIR /home/121/services/PA-accounts-service/
 COPY package*.json ./
 RUN npm ci
 
-ARG NODE_ENV=development #development/production
+# Possible environments: development | production
+ARG NODE_ENV=development
 ENV NODE_ENV="${NODE_ENV}"
-#CMD ["npm", "run", "start:dev"]
-#CMD ["npm", "start"]
 
+# With live-reload during development:
+# CMD ["npm", "run", "start:dev"]
 
+# Regular:
+# CMD ["npm", "start"]
