Update azure-pipelines-build.yml for Azure Pipelines

--- a/interfaces/AW-App/azure-pipelines-build.yml
+++ b/interfaces/AW-App/azure-pipelines-build.yml
@@ -35,3 +35,10 @@ steps:
 - script: npm run ionic -- build android
   displayName: BuildAndroid
   workingDirectory: interfaces/AW-App/
+
+
+- task: CordovaBuild@1
+  inputs:
+    platform: 'android'
+    configuration: '$(Configuration)'
+    outputPattern: 'bin'
