--- a/interfaces/AW-App/azure-pipelines-build.yml
+++ b/interfaces/AW-App/azure-pipelines-build.yml
@@ -42,3 +42,14 @@ steps:
   inputs:
     targetPath: interfaces/AW-App/platforms/android/app/build/outputs/apk/debug/app-debug.apk
     artifactName: AW-app
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: interfaces/AW-App/platforms/android/app/build/outputs/apk/debug/app-debug.apk
+    artifactName: 'AW-appBuild'
+    #publishLocation: 'Container' # Options: container, filePath
+    #targetPath: # Required when publishLocation == FilePath
+    #parallel: false # Optional
+    #parallelCount: # Optional
+    #fileCopyOptions: #Optional
+
