--- a/interfaces/AW-App/azure-pipelines-build.yml
+++ b/interfaces/AW-App/azure-pipelines-build.yml
@@ -36,20 +36,9 @@ steps:
   displayName: BuildAndroid
   workingDirectory: interfaces/AW-App/
 
-# Publish pipeline artifact
-# Publish (upload) a file or directory as a named artifact for the current run
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: interfaces/AW-App/platforms/android/app/build/outputs/apk/debug/app-debug.apk
-    artifactName: AW-app
-
 - task: PublishBuildArtifacts@1
   inputs:
     pathtoPublish: interfaces/AW-App/platforms/android/app/build/outputs/apk/debug/app-debug.apk
-    artifactName: 'AW-appBuild'
-    #publishLocation: 'Container' # Options: container, filePath
-    #targetPath: # Required when publishLocation == FilePath
-    #parallel: false # Optional
-    #parallelCount: # Optional
-    #fileCopyOptions: #Optional
+    artifactName: 'AW-app'
+
 
