--- a/interfaces/AW-App/azure-pipelines-build.yml
+++ b/interfaces/AW-App/azure-pipelines-build.yml
@@ -5,20 +5,13 @@ trigger:
   paths:
     include:
     - 'interfaces/AW-App/*'
-pr:
-  branches:
-    include:
-    - master
-  paths:
-    include:
-    - 'interfaces/AW-App/*'
 
 
 pool:
   vmImage: 'macOS-10.14'
 
 steps:
-- script: echo hello from macOS
+- script: echo Starting build
 
 - task: NodeTool@0
   inputs:
@@ -36,7 +29,7 @@ steps:
   displayName: BuildAndroid
   workingDirectory: interfaces/AW-App/
 
-- script: npm run build:native --prod
+- script: npm run build:native -- --prod
   displayName: BuildAndroidProd
   workingDirectory: interfaces/AW-App/
 
