AB#852 Only run build-pipeline for AW-App changes

--- a/interfaces/AW-App/azure-pipelines-build.yml
+++ b/interfaces/AW-App/azure-pipelines-build.yml
@@ -1,4 +1,15 @@
+
+# See: https://docs.microsoft.com/azure/devops/pipelines/yaml-schema
+# See: https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/android
+
 trigger:
+  branches:
+    include:
+    - master
+  paths:
+    include:
+    - 'interfaces/AW-App/*'
+pr:
   branches:
     include:
     - master
