--- a/interfaces/AW-App/azure-pipelines.yml
+++ b/interfaces/AW-App/azure-pipelines.yml
@@ -1,20 +1,25 @@
 # See: https://docs.microsoft.com/azure/devops/pipelines/yaml-schema
 # See: https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
+variables:
+  workingDir: interfaces/PA-App/
+
+
 trigger:
   branches:
     include:
     - master
   paths:
     include:
-    - 'interfaces/AW-App/*'
+    - 'interfaces/PA-App/*'
 pr:
   branches:
     include:
     - master
   paths:
     include:
-    - 'interfaces/AW-App/*'
+    - 'interfaces/PA-App/*'
+
 
 pool:
   vmImage: 'ubuntu-16.04'
@@ -26,12 +31,12 @@ steps:
 
 - script: npm ci
   displayName: Install
-  workingDirectory: interfaces/AW-App/
+  workingDirectory: $(workingDir)
 
 - script: npm run lint
   displayName: Linting
-  workingDirectory: interfaces/AW-App/
+  workingDirectory: $(workingDir)
 
 - script: npm test
   displayName: Tests
-  workingDirectory: interfaces/AW-App/
+  workingDirectory: $(workingDir)
