--- a/interfaces/PA-App/azure-pipelines.yml
+++ b/interfaces/PA-App/azure-pipelines.yml
@@ -1,6 +1,10 @@
 # See: https://docs.microsoft.com/azure/devops/pipelines/yaml-schema
 # See: https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
+variables:
+  workingDir: interfaces/PA-App/
+
+
 trigger:
   branches:
     include:
@@ -27,12 +31,12 @@ steps:
 
 - script: npm ci
   displayName: Install
-  workingDirectory: interfaces/PA-App/
+  workingDirectory: $(workingDir)
 
 - script: npm run lint
   displayName: Linting
-  workingDirectory: interfaces/PA-App/
+  workingDirectory: $(workingDir)
 
 - script: npm test
   displayName: Tests
-  workingDirectory: interfaces/PA-App/
+  workingDirectory: $(workingDir)
