--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -10,7 +10,10 @@
     "ionic": "ionic",
     "ng": "ng",
     "start": "ng serve --port 0",
+    "set-env-variables": "node ./_set-env-variabes.js",
+    "prebuild": "npm run set-env-variables",
     "build": "ng build",
+    "prebuild:native": "npm run set-env-variables",
     "build:native": "npm run ionic -- cordova build android ",
     "test": "ng test --no-watch --browsers=ChromeHeadless",
     "test:dev": "ng test",
@@ -63,6 +66,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-res": "^0.6.0",
+    "dotenv": "^8.2.0",
     "ionic": "^5.4.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
